# robotSim

./: .gitignore  Makefile  Readme.md  basic_plot.py  basic_pos_test.py  ecal_interface.py  full_launch_config.ecalsys  interface.py  ivy_interface.py  launch.py  local_serial.py  map.yaml  maptest.yaml  messages.proto  messages_pb2.py  nav2_sim_enac.rviz  navigation.py  package.xml  readme.md  requirements.txt  ros_interface.py  setup.cfg  setup.py  simu_robot.py
OLD_simulation/: basic_pos_test.py  basic_teleop.py  ecal_gui.py  ecal_interface.py
ecal_lua/: CMakeLists.txt
ecal_lua/ecal_lua/: CMakeLists.txt  ecal_com.cpp  ecal_com.h  ecal_functions.cpp  ecal_lua.cpp  ecal_lua.h  game_actions.cpp  game_actions_ecal.cpp  game_actions_ecal.h  game_actions_lua.cpp  game_actions_lua.h  main.lua  protogen.cpp  simu_core.h  simu_navigation.cpp
gui/: graph.py  main.py  manual_pub.py
gui/display/: draw.py
gui/proto/: game_actions_pb2.py
gui/templates/: index.html
lua_scripts/: .lua  amalgamage.py  config.lua  main.lua  main2.lua  main2_amalg.lua  main2_amalg.min.lua  main2_amalg_fonctionnel.lua  main2_fonctionnel.lua  path_settings.lua  state.lua  statemachine.lua  states.lua  utils.lua
proto/: game_actions.proto
robot_sim_enac/: Makefile  commandsRos.txt  data_types.py  interface.py  ivy_interface.py  local_debug.py  local_serial.py  messages.proto  navigation.py  ros_interface.py  simu_robot.py
runner/: CMakeLists.txt  CMakeLists_2.txt  game_actions.cpp  game_actions.h  game_actions_lua.cpp  game_actions_lua.h  navigation.cpp  navigation.h  protogen.cpp  protogen.h  runner.cpp  simu_core.cpp  simu_core.h  simu_navigation.h
simulation/: __simu_robot.py  ecal_gui.py  game_actions_pb2.py  interface.py  lua_interpreter.py  lua_interpreter_server.py  messages.pb.cc  messages.pb.h  messages.proto  messages_pb2.py  navigation.py
